--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/xiaoguaishou404/monster/issues"
   },
-  "homepage": "https://github.com/xiaoguaishou404/monster#readme"
+  "homepage": "https://github.com/xiaoguaishou404/monster#readme",
+  "dependencies": {
+    "vue": "^3.2.37"
+  }
 }
