解决parcel问题之前的备份

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "monster",
   "version": "0.0.1",
-  "description": "这是一个UI框架",
-  "main": "index.js",
+  "description": "这是一个基于VUE的UI框架",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,8 +19,5 @@
   "bugs": {
     "url": "https://github.com/xiaoguaishou404/monster/issues"
   },
-  "homepage": "https://github.com/xiaoguaishou404/monster#readme",
-  "dependencies": {
-    "vue": "^3.2.37"
-  }
+  "homepage": "https://github.com/xiaoguaishou404/monster#readme"
 }
