--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monster",
   "version": "0.0.1",
   "description": "这是一个基于VUE的UI框架",
-  "main": "src/app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
