--- a/package.json
+++ b/package.json
@@ -19,5 +19,18 @@
   "bugs": {
     "url": "https://github.com/xiaoguaishou404/monster/issues"
   },
-  "homepage": "https://github.com/xiaoguaishou404/monster#readme"
+  "homepage": "https://github.com/xiaoguaishou404/monster#readme",
+  "dependencies": {
+    "vue": "^2.5.16",
+    "vue-hot-reload-api": "^2.3.4"
+  },
+  "devDependencies": {
+    "@vue/component-compiler-utils": "^3.3.0",
+    "parcel-bundler": "^1.9.2",
+    "sass": "^1.53.0",
+    "vue-template-compiler": "^2.5.16"
+  },
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
+  }
 }
