--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.3.0",
     "chai": "^4.1.2",
+    "chai-spies": "^1.0.0",
     "parcel-bundler": "^1.9.2",
     "sass": "^1.53.0",
     "vue-template-compiler": "^2.5.16"
