--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "这是一个基于VUE的UI框架",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-test": "parcel watch test/* --no-cache & karma start",
+    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,18 @@
     "@vue/component-compiler-utils": "^3.3.0",
     "chai": "^4.1.2",
     "chai-spies": "^1.0.0",
+    "karma": "^2.0.4",
+    "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^1.3.4",
+    "mocha": "^5.2.0",
+    "node-sass": "^7.0.1",
     "parcel-bundler": "^1.9.2",
     "sass": "^1.53.0",
+    "sinon": "^6.0.1",
+    "sinon-chai": "^3.2.0",
     "vue-template-compiler": "^2.5.16"
   },
   "alias": {
