--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
-node_js:"8"
-addons:chrome:stable
+node_js: 
+  -"8"
+addons: 
+  chrome: stable
 sudo: required
-before_script: "sudo chown root /opt/google/chrome/chrome-sanbox"
-"sudo chmod 4755 /opt/google/chrome/chrome-sanbox"
+before_script: 
+  -"sudo chown root /opt/google/chrome/chrome-sanbox"
+  -"sudo chmod 4755 /opt/google/chrome/chrome-sanbox"
