--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "这是一个基于VUE的UI框架",
   "main": "dist/index.js",
   "scripts": {
-    "start":"parcel index.html --no-cache",
+    "start": "parcel index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache & karma start",
-    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
+    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "repository": {
     "type": "git",
@@ -37,12 +39,13 @@
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^1.3.4",
     "mocha": "^5.2.0",
-    "node-sass": "^7.0.1",
     "parcel-bundler": "^1.9.2",
-    "sass": "^1.53.0",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.1.0",
     "sinon": "^6.0.1",
     "sinon-chai": "^3.2.0",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "vuepress": "^0.13.1"
   },
   "alias": {
     "vue": "./node_modules/vue/dist/vue.common.js"
