--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/xiaoguaishou404/monster#readme",
   "dependencies": {
     "vue": "^2.5.16",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-server-renderer": "^2.5.16"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.3.0",
@@ -39,8 +40,8 @@
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^1.3.4",
     "mocha": "^5.2.0",
-    "parcel-bundler": "^1.9.2",
     "node-sass": "^4.9.2",
+    "parcel-bundler": "^1.9.2",
     "sass-loader": "^7.1.0",
     "sinon": "^6.0.1",
     "sinon-chai": "^3.2.0",
